feat: update img relative adress  Mon 16.05.2022 22.56.23

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -11,13 +11,15 @@
 </head>
 <body>
     <h1>Заболел и на 8ой неделе не успел сделать домашку((</h1>
+    <h2>Смотрите репозиторий и pull-request, постарался сделать хотя бы это чтобы получить баллы за таску</h2>
+
     <div class="container">
         <div class="slider">
 
-            <img src="/src/1.jpg" alt="1">
-            <img src="/src/2.png" alt="2">
-            <img src="/src/3.jpeg" alt="3">
-            <img src="/src/4.jpg" alt="4">
+            <img src="../src/1.jpg" alt="1">
+            <img src="../src/2.png" alt="2">
+            <img src="../src/3.jpeg" alt="3">
+            <img src="../src/4.jpg" alt="4">
 
         </div>
         
