fix: src and href Mon 16.05.2022 23.09.38

--- a/cssMemSlider/index.html
+++ b/cssMemSlider/index.html
@@ -5,21 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Css-mem-slider</title>
-    <link rel="stylesheet" href="/normalize.css">
-    <link rel="stylesheet" href="/style.css">
+    <link rel="stylesheet" href="cssMemSlider/normalize.css">
+    <link rel="stylesheet" href="cssMemSlider/style.css">
     
 </head>
 <body>
     <h1>Заболел и на 8ой неделе не успел сделать домашку((</h1>
     <h2>Смотрите репозиторий и pull-request, постарался сделать хотя бы это чтобы получить баллы за таску</h2>
+    <h3>2 часа ковырялся, но при этом даже картинки не грузятся((</h3>
 
     <div class="container">
         <div class="slider">
 
-            <img src="../src/1.jpg" alt="1">
-            <img src="../src/2.png" alt="2">
-            <img src="../src/3.jpeg" alt="3">
-            <img src="../src/4.jpg" alt="4">
+            <img src="src/1.jpg" alt="1">
+            <img src="src/2.png" alt="2">
+            <img src="src/3.jpeg" alt="3">
+            <img src="src/4.jpg" alt="4">
 
         </div>
         
